# farmer-power-platform

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
libs/fp-common/: pyproject.toml
libs/fp-common/fp_common/: __init__.py  admin.py  logging.py
libs/fp-common/fp_common/cache/: __init__.py  mongo_change_stream_cache.py
libs/fp-common/fp_common/converters/: __init__.py  agent_config_converters.py  collection_converters.py  cost_converters.py  plantation_converters.py  rag_converters.py  source_config_converters.py
libs/fp-common/fp_common/events/: __init__.py  ai_model_events.py  cost_recorded.py  dlq_handler.py  dlq_repository.py
libs/fp-common/fp_common/mcp/: __init__.py  client.py  errors.py  registry.py  tool.py
libs/fp-common/fp_common/models/: __init__.py  agent_config_summary.py  base.py  collection_point.py  cost.py  document.py  domain_events.py  factory.py  farmer.py  farmer_performance.py  flush.py  grading_model.py  performance_summary.py  rag.py  region.py  source_config.py  source_config_summary.py  source_summary.py  value_objects.py
libs/fp-proto/: README.md  pyproject.toml
libs/fp-proto/src/fp_proto/: __init__.py
libs/fp-proto/src/fp_proto/ai_model/: __init__.py
libs/fp-proto/src/fp_proto/ai_model/v1/: __init__.py  ai_model_pb2.py  ai_model_pb2.pyi  ai_model_pb2_grpc.py
libs/fp-proto/src/fp_proto/collection/: __init__.py
libs/fp-proto/src/fp_proto/collection/v1/: __init__.py  collection_pb2.py  collection_pb2.pyi  collection_pb2_grpc.py
libs/fp-proto/src/fp_proto/mcp/: __init__.py
libs/fp-proto/src/fp_proto/mcp/v1/: __init__.py  mcp_tool_pb2.py  (+2 more)
libs/fp-proto/src/fp_proto/plantation/: __init__.py
libs/fp-proto/src/fp_proto/platform_cost/: __init__.py
libs/fp-proto/src/plantation/v1/: plantation_pb2.py  plantation_pb2_grpc.py
libs/fp-testing/: pyproject.toml
libs/fp-testing/fp_testing/: __init__.py  mongodb.py
libs/fp-testing/fp_testing/mocks/: __init__.py  mcp_mock.py
mcp-servers/plantation-mcp/: Dockerfile  pyproject.toml
mcp-servers/plantation-mcp/src/plantation_mcp/: __init__.py  config.py  main.py
mcp-servers/plantation-mcp/src/plantation_mcp/api/: __init__.py  mcp_service.py
mcp-servers/plantation-mcp/src/plantation_mcp/infrastructure/: __init__.py  plantation_client.py
mcp-servers/plantation-mcp/src/plantation_mcp/tools/: __init__.py  definitions.py
mcp-servers/plantation-mcp/tests/: __init__.py
mcp-servers/plantation-mcp/tests/unit/: __init__.py  test_mcp_service.py
scripts/agent-config/: pyproject.toml
scripts/agent-config/src/fp_agent_config/: __init__.py  cli.py  client.py  models.py  settings.py  validator.py
scripts/knowledge-config/: pyproject.toml
scripts/knowledge-config/src/fp_knowledge/: __init__.py  cli.py  client.py  models.py  settings.py  validator.py
services/bff/: Dockerfile  README.md  pyproject.toml
services/bff/dapr/: config.yaml  resiliency.yaml
services/bff/src/bff/: config.py  main.py
services/bff/src/bff/api/: __init__.py
services/bff/src/bff/infrastructure/: __init__.py  tracing.py
services/bff/src/bff/services/: __init__.py  base_service.py  farmer_service.py
services/bff/src/bff/transformers/: __init__.py  farmer_transformer.py
services/collection-model/: Dockerfile  pyproject.toml
services/collection-model/src/: __init__.py
services/collection-model/src/collection_model/: __init__.py  config.py  main.py
services/collection-model/src/collection_model/api/: __init__.py  events.py  grpc_service.py  health.py  source_config_service.py
services/collection-model/src/collection_model/domain/: __init__.py  document_index.py  exceptions.py  ingestion_job.py  manifest.py  raw_document.py
services/collection-model/src/collection_model/events/: __init__.py  subscriber.py
services/collection-model/src/collection_model/infrastructure/: __init__.py  ai_model_client.py  blob_storage.py  dapr_event_publisher.py  dapr_jobs_client.py  dapr_secret_client.py  document_repository.py  ingestion_queue.py  iteration_resolver.py  metrics.py  mongodb.py  pubsub.py  pull_data_fetcher.py  raw_document_store.py  storage_metrics.py  thumbnail_generator.py  tracing.py
services/collection-model/src/collection_model/processors/: __init__.py  base.py  json_extraction.py  registry.py  zip_extraction.py
services/collection-model/src/collection_model/services/: __init__.py  content_processor_worker.py  job_registration_service.py  pull_job_handler.py  source_config_service.py
services/plantation-model/: Dockerfile  README.md  pyproject.toml
services/plantation-model/.claude/: settings.local.json
services/plantation-model/src/plantation_model/: __init__.py  config.py  main.py
services/plantation-model/src/plantation_model/api/: __init__.py  grpc_server.py  plantation_service.py
services/plantation-model/src/plantation_model/domain/: __init__.py
services/plantation-model/src/plantation_model/events/: __init__.py  publisher.py  subscriber.py
services/plantation-model/src/plantation_model/infrastructure/: __init__.py  collection_client.py  collection_grpc_client.py  dapr_client.py  google_elevation.py  mongodb.py  tracing.py
services/plantation-model/tests/: __init__.py  conftest.py
services/plantation-model/tests/integration/: __init__.py  test_app.py
services/plantation-model/tests/unit/: __init__.py  test_config.py  test_health.py  test_mongodb.py
services/platform-cost/: Dockerfile  README.md  pyproject.toml
services/platform-cost/dapr/: config.yaml  subscription.yaml
services/platform-cost/src/platform_cost/: __init__.py  config.py  main.py
services/platform-cost/src/platform_cost/api/: __init__.py  grpc_server.py  health.py  unified_cost_service.py
services/platform-cost/src/platform_cost/domain/: __init__.py  cost_event.py
services/platform-cost/src/platform_cost/handlers/: __init__.py  cost_event_handler.py
services/platform-cost/src/platform_cost/infrastructure/: __init__.py  mongodb.py  tracing.py
services/platform-cost/src/platform_cost/services/: __init__.py  budget_monitor.py
(+1228 files in other folders)
