[project]
name = "farmer-power-platform"
version = "0.1.0"
description = "AI-powered tea quality management platform for smallholder farmers in Kenya"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Farmer Power Team" }
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async Support
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # AI/LLM
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",  # ChatOpenAI for OpenRouter integration
    "langgraph>=0.0.20",
    "openai>=1.10.0",  # OpenRouter uses OpenAI-compatible API

    # Database
    "motor>=3.3.0",  # Async MongoDB driver
    "pymongo>=4.6.0",

    # Vector DB
    "pinecone-client>=3.0.0",

    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",

    # Utilities
    "tenacity>=8.2.0",  # Retry logic
    "python-multipart>=0.0.6",  # File uploads
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",

    # Test Data
    "faker>=22.0.0",
    "factory-boy>=3.3.0",
    "polyfactory>=2.18.0",

    # HTTP Mocking
    "respx>=0.20.0",  # Mock httpx requests
    "aioresponses>=0.7.0",  # Mock aiohttp requests

    # Type Checking
    "mypy>=1.8.0",
    "types-requests>=2.31.0",

    # Linting & Formatting
    "ruff>=0.1.0",
    "black>=24.1.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "respx>=0.20.0",
    "aioresponses>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async mode - auto-detect async tests
asyncio_mode = "auto"

# Default options
addopts = [
    "-v",                          # Verbose output
    "--tb=short",                  # Short traceback format
    "-ra",                         # Show extra test summary info
    "--strict-markers",            # Treat unknown markers as errors
    "--strict-config",             # Treat warnings in config as errors
]

# Markers for filtering tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks as integration test requiring external services",
    "golden: marks as golden sample accuracy test",
    "contract: marks as contract/schema validation test",
    "unit: marks as unit test (fast, isolated)",
    "e2e: marks as end-to-end test",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Timeout for individual tests (seconds)
timeout = 30

# Log configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 70
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "pymongo.*",
    "pinecone.*",
    "langchain.*",
    "langgraph.*",
    "dapr.*",
]
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

# Exclude auto-generated protobuf files and standalone PoC
exclude = [
    "libs/fp-proto/src/fp_proto/**/*_pb2.py",
    "libs/fp-proto/src/fp_proto/**/*_pb2.pyi",
    "libs/fp-proto/src/fp_proto/**/*_pb2_grpc.py",
    "tests/e2e/poc-dapr-patterns/**",  # Standalone PoC for ADR validation
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Allow raise without from in except
    "ARG001", # Unused function argument (common in fixtures)
    "ARG002", # Unused method argument (common in gRPC servicers)
    "N802",   # gRPC method names are PascalCase (required by proto)
    "UP046",  # Keep Generic[T] syntax for Python 3.11 compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments are common in test fixtures
    "S101",   # Assert is expected in tests
    "RUF059", # Unused unpacked variables (common in test assertions)
    "ERA001", # Allow explanatory comments that look like code
    "TC001",  # Test imports don't need type-checking blocks
    "TC002",  # Test imports don't need type-checking blocks (used at runtime in tests)
    "TC003",  # Test imports don't need type-checking blocks
    "F841",   # Unused variables in tests (result = await ...)
    "B017",   # Blind exception assertions acceptable in tests
]
"libs/fp-proto/src/fp_proto/**/__init__.py" = [
    "F403",   # Star imports used for re-exporting proto symbols
    "F401",   # Imported but unused (re-exports)
]
"**/api/*_service.py" = [
    "ARG002", # gRPC context parameter required by interface
]
"services/**/main.py" = [
    "E402",   # Module imports after logging.basicConfig() - required for structlog setup
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
force-single-line = false
combine-as-imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# BLACK CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
